# brazil-soy-production

./: .gitignore  Makefile  README.md  pyproject.toml
bsp/: app.py  explore.ipynb  explore_macroregions.ipynb  explore_states.ipynb
bsp/assets/: common.css  dropdown.css  header.css
bsp/assets/images/: soybean-field.avif
bsp/lib/: __init__.py  ml.py  native_libs.py  preprocessor.py  utils.py
bsp/pages/: area.py  home.py  production.py  visualize.py
database/: 283-info.csv  283-soja-all.csv  283-soja-macroregions.csv  283-soja-states-info.csv  283-soja-states.csv  6588-soja-all.csv  6588-soja-bgr-ap-info.csv  6588-soja-bgr-ap.csv  6588-soja-macroregions.csv  6588-soja-states-info.csv  6588-soja-states.csv
database/original/: 1731-soja-p.csv  283-soja-ap.csv  6588-soja-ap.csv
src/: app.py  apresentacao.ipynb  explore.ipynb
src/.ipynb_checkpoints/: apresentacao-checkpoint.ipynb
src/lib/: __init__.py  ml.py  native_libs.py  preprocess.py  process.py  utils.py  visualize.py
src/pages/: area.py  production.py
tests/: test_1.py
tests/lib/: test_preprocessor.py
