[tool.poetry]
name = "brazil-soy-production"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "brazil_soy_production"}]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
